maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: error: not found: value isDirectionDree
    if(!nordActif && isDirectionDree(Direction.NORD) && sommeAngle!=0){
                     ^Escaper:59: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return !estFaceMur()
  ^